--- a/index.html
+++ b/index.html
@@ -1,77 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MEGA-Data: Scalable World Modeling Framework</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      line-height: 1.6;
+      background-color: #fefefe;
+      color: #222;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    h1 {
+      color: #006d77;
+      margin-bottom: 0.3rem;
+    }
+    h2 {
+      color: #0a9396;
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #005f73;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    nav {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    nav a {
+      margin: 0 1rem;
+      font-weight: 600;
+    }
+    blockquote {
+      font-style: italic;
+      color: #555;
+      border-left: 4px solid #0a9396;
+      padding-left: 1rem;
+      margin: 2rem 0;
+      background: #e0fbfc;
+      border-radius: 4px;
+    }
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      text-align: center;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>MEGA-Data</h1>
+    <p><strong>Physics-stamped, light-aware AI framework for scalable world modeling and forensic analysis.</strong></p>
+  </header>
 
-# Mega-Data-Stamped-Ai-Framework
-Physics-stamped, light-aware AI framework for scalable world modeling and forensic analysis. MEGA-Data enables detailed environmental simulation and anomaly detection using metadata-enhanced geospatial tiles. Designed to run efficiently on standard GPU hardware.
-# MEGA-Data: Stamped AI Framework for Scalable World Modeling
+  <nav>
+    <a href="README.md">README</a>
+    <a href="LICENSE">License</a>
+    <a href="https://github.com/Teromen/Mega-Data-Stamped-Ai-Framework">GitHub Repo</a>
+  </nav>
 
-**Physics-stamped, light-aware AI framework for scalable world modeling and forensic analysis.**
+  <main>
+    <h2>About MEGA-Data</h2>
+    <p>
+      MEGA-Data is an innovative data architecture and framework designed to enable highly detailed environmental simulations, anomaly detection, and light-behavior modeling using metadata-enhanced geospatial tiles. Built to run efficiently on consumer-grade GPUs, MEGA-Data empowers researchers, analysts, and investigators with forensic-grade tools for a wide range of real-world applications.
+    </p>
 
-MEGA-Data is an innovative architecture and data framework designed to enable highly detailed environmental simulations, anomaly detection, and light-behavior modeling using metadata-enhanced geospatial tiles. Built to run efficiently on consumer-grade GPUs, MEGA-Data empowers researchers, analysts, and investigators with forensic-grade tools for a wide range of real-world applications.
+    <h2>Key Features</h2>
+    <ul>
+      <li><strong>Light-Aware Intelligence:</strong> AI models interpret photon behavior—reflection, refraction, shadow casting—within environments.</li>
+      <li><strong>Physics-Stamped Tiles:</strong> Each data tile contains physical metadata including shadow depth, occlusion zones, and specular surfaces.</li>
+      <li><strong>Mega-Scale Tiling Architecture:</strong> Manages vast datasets with GPU-optimized, layered tiles for real-time rendering.</li>
+      <li><strong>Scripted Detail Stamps:</strong> Programmable overlays for forensic reconstruction and scene simulation.</li>
+    </ul>
 
----
+    <h2>Use Cases</h2>
+    <ul>
+      <li>Forensic scene reconstruction with light-based anomaly detection</li>
+      <li>Large-scale environmental modeling with realistic light behavior</li>
+      <li>AI-assisted detection of tampering or staging</li>
+      <li>Citizen science and remote forensic investigations using standard GPUs</li>
+    </ul>
 
-## 🚀 Key Features
+    <blockquote>
+      “A drop of DNA at a scene might pass chemical tests,<br />
+      but if the shadow angle, material reflectivity, or time-of-day coherence is off,<br />
+      MEGA-Data can detect the manipulation — acting as a forensic lie detector for reality.”
+    </blockquote>
+  </main>
 
-- **Light-Aware Intelligence**  
-  AI models interpret photon behavior — such as reflection, refraction, and shadow casting — within the environment.
-
-- **Physics-Stamped Tiling System**  
-  Every data tile includes physical metadata: shadow depth, occlusion zones, specular surfaces, and more.
-
-- **Mega-Scale Tiling Architecture**  
-  Organizes vast datasets into GPU-optimized, layered tiles to support real-time rendering and interaction.
-
-- **Scripted Detail Stamps**  
-  Programmable overlays add refined, context-aware metadata for forensic reconstruction or scene simulation.
-
----
-
-## 🕵️ Use Cases
-
-- **Forensic Scene Reconstruction**  
-  Analyze light-based inconsistencies or simulate crime scenes remotely with high fidelity.
-
-- **Environmental Modeling**  
-  Create large-scale world models with realistic light behavior and physical attributes.
-
-- **AI-Assisted Anomaly Detection**  
-  Detect tampering, staging, or physical impossibilities based on how light interacts with the scene.
-
-- **Citizen Science & Remote Investigation**  
-  Perform advanced forensic assessments from a standard desktop GPU.
-
----
-
-## 🛠️ Requirements
-
-- Modern GPU (NVIDIA or AMD with OpenCL/CUDA support recommended)
-- Python (for scripting metadata overlays and AI logic)
-- [Optional] Integration with Unreal Engine or similar for visualization
-
----
-
-## 📄 License
-
-This project is licensed under the **Apache License 2.0**. See the [LICENSE](./LICENSE) file for details.
-
----
-
-## ✨ Status
-
-This is a **public research prototype**. Contributions, forks, and experiments are welcome.
-
-Feel free to open issues, suggest features, or discuss theory via the Issues tab.
-
----
-
-## 👤 Author
-
-**Teromen**  
-_Independent researcher & designer of the MEGA-Data Framework_
-
----
-
-## 🧠 Philosophy
-
-> “A drop of DNA at a scene might pass chemical tests,  
-> but if the shadow angle, material reflectivity, or time-of-day coherence is off,  
-> MEGA-Data can detect the manipulation — acting as a forensic lie detector for reality.”
+  <footer>
+    &copy; 2025 Teromen
+  </footer>
+</body>
+</html>
