--- a/index.html
+++ b/index.html
@@ -3,106 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MEGA-Data: Scalable World Modeling Framework</title>
+  <title>Mega-Data Stamped AI Framework</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background: #121212;
+      color: #eee;
       line-height: 1.6;
-      background-color: #fefefe;
-      color: #222;
     }
     header {
+      background: #1f1f1f;
+      padding: 1rem;
       text-align: center;
+      border-bottom: 2px solid #0af;
+    }
+    header h1 {
+      margin: 0;
+      font-weight: 700;
+      font-size: 2.2rem;
+      color: #0af;
+      letter-spacing: 1px;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
       margin-bottom: 2rem;
     }
-    h1 {
-      color: #006d77;
-      margin-bottom: 0.3rem;
-    }
     h2 {
-      color: #0a9396;
-      margin-top: 2rem;
+      color: #0af;
       margin-bottom: 0.5rem;
+      border-bottom: 1px solid #0af;
+      padding-bottom: 0.3rem;
+    }
+    p {
+      font-size: 1.1rem;
+    }
+    ul {
+      margin-left: 1.5rem;
     }
     a {
-      color: #005f73;
+      color: #0af;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    nav {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    nav a {
-      margin: 0 1rem;
-      font-weight: 600;
-    }
-    blockquote {
-      font-style: italic;
-      color: #555;
-      border-left: 4px solid #0a9396;
-      padding-left: 1rem;
-      margin: 2rem 0;
-      background: #e0fbfc;
-      border-radius: 4px;
-    }
     footer {
-      margin-top: 4rem;
-      font-size: 0.9rem;
       text-align: center;
-      color: #555;
+      padding: 1rem;
+      font-size: 0.9rem;
+      border-top: 1px solid #222;
+      margin-top: 4rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>MEGA-Data</h1>
-    <p><strong>Physics-stamped, light-aware AI framework for scalable world modeling and forensic analysis.</strong></p>
+    <h1>Mega-Data Stamped AI Framework</h1>
+    <p>Physics-aware, semantic-rich AI and rendering engine</p>
   </header>
 
-  <nav>
-    <a href="README.md">README</a>
-    <a href="LICENSE">License</a>
-    <a href="https://github.com/Teromen/Mega-Data-Stamped-Ai-Framework">GitHub Repo</a>
-  </nav>
-
   <main>
-    <h2>About MEGA-Data</h2>
-    <p>
-      MEGA-Data is an innovative data architecture and framework designed to enable highly detailed environmental simulations, anomaly detection, and light-behavior modeling using metadata-enhanced geospatial tiles. Built to run efficiently on consumer-grade GPUs, MEGA-Data empowers researchers, analysts, and investigators with forensic-grade tools for a wide range of real-world applications.
-    </p>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>
+        Mega-Data Stamped AI Framework is a revolutionary engine combining physics-aware
+        data layers, semantic texture tagging, and AI-driven rendering. It enables
+        scalable, adaptive, and future-proof game worlds and simulations.
+      </p>
+    </section>
 
-    <h2>Key Features</h2>
-    <ul>
-      <li><strong>Light-Aware Intelligence:</strong> AI models interpret photon behavior—reflection, refraction, shadow casting—within environments.</li>
-      <li><strong>Physics-Stamped Tiles:</strong> Each data tile contains physical metadata including shadow depth, occlusion zones, and specular surfaces.</li>
-      <li><strong>Mega-Scale Tiling Architecture:</strong> Manages vast datasets with GPU-optimized, layered tiles for real-time rendering.</li>
-      <li><strong>Scripted Detail Stamps:</strong> Programmable overlays for forensic reconstruction and scene simulation.</li>
-    </ul>
+    <section id="features">
+      <h2>Core Features</h2>
+      <ul>
+        <li>Semantic Texture Tags for context-aware rendering and physics</li>
+        <li>MegaData Layers integrate detailed physics and AI metadata</li>
+        <li>Dynamic asset streaming with on-the-fly tag decompression</li>
+        <li>Advanced pathtracing visualization for AI connectivity</li>
+        <li>Support for emergent AI behavior and multi-world hive architectures</li>
+        <li>Dream land procedural generation for surreal, adaptive environments</li>
+      </ul>
+    </section>
 
-    <h2>Use Cases</h2>
-    <ul>
-      <li>Forensic scene reconstruction with light-based anomaly detection</li>
-      <li>Large-scale environmental modeling with realistic light behavior</li>
-      <li>AI-assisted detection of tampering or staging</li>
-      <li>Citizen science and remote forensic investigations using standard GPUs</li>
-    </ul>
+    <section id="vision">
+      <h2>Vision</h2>
+      <p>
+        To empower game developers, researchers, and AI innovators with a scalable platform
+        that bridges physical reality and semantic understanding — enabling smarter, richer,
+        and more immersive virtual worlds.
+      </p>
+    </section>
 
-    <blockquote>
-      “A drop of DNA at a scene might pass chemical tests,<br />
-      but if the shadow angle, material reflectivity, or time-of-day coherence is off,<br />
-      MEGA-Data can detect the manipulation — acting as a forensic lie detector for reality.”
-    </blockquote>
+    <section id="contact">
+      <h2>Contact & Collaboration</h2>
+      <p>
+        Interested in collaborating or learning more? Reach out via 
+        <a href="mailto:your.email@example.com">your.email@example.com</a>.
+      </p>
+    </section>
   </main>
 
   <footer>
-    &copy; 2025 Teromen
+    &copy; 2025 Teromen | Mega-Data AI Framework
   </footer>
 </body>
 </html>
