--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h2>Contact & Collaboration</h2>
       <p>
         Interested in collaborating or learning more? Reach out via 
-        <a href="mailto:your.email@example.com">your.email@example.com</a>.
+        <a href="mailto:dsstang36@gmail.com">your.email@example.com</a>.
       </p>
     </section>
   </main>
