--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tag-Based Game Engine</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #111;
+      color: #eee;
+    }
+    header {
+      background-color: #222;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    section {
+      padding: 20px;
+    }
+    h2 {
+      color: #0ff;
+    }
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+    footer {
+      background-color: #222;
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Tag + Trace Engine Core</h1>
+    <p>Simple, realistic, and modular game engine focused on tag-based data optimization and surface-aware AI.</p>
+  </header>
+
+  <section>
+    <h2>Key Engine Systems</h2>
+    <ul>
+      <li><strong>Surface Tagging System</strong> – Embed metadata into textures and meshes for AI vision, physics logic, and light behavior.</li>
+      <li><strong>Trace-Based AI Perception</strong> – Bot logic uses raytraced data and surface tags for vision, sound detection, and navigation.</li>
+      <li><strong>Texture-Driven Lighting Control</strong> – Normalmaps, masks, and texture tags influence real-time lighting fidelity.</li>
+      <li><strong>LOD-Based Light Tagging</strong> – Real-time raytracing adjusts detail dynamically based on surface tags.</li>
+      <li><strong>Baked Lightmap Overrides</strong> – RT systems can selectively overwrite or blend with baked lighting based on tags.</li>
+      <li><strong>Prebaked Physics Zones</strong> – Stamp areas with physical properties before runtime to accelerate simulation.</li>
+      <li><strong>Tagged Sound Reverb Zones</strong> – Acoustic environments controlled through tagged geometry.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Design Philosophy</h2>
+    <p>This engine isn't about complexity — it's about purpose. Every texture, every surface, every effect: informed by tags. Built for realistic bots, efficient rendering, and total runtime clarity.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Tag + Trace Engine | Built for developers who think ahead.</p>
+  </footer>
+</body>
+</html>
