--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tag-Based Game Engine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Game Engine — Tag & Trace Core</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
       background-color: #111;
-      color: #eee;
+      color: #f4f4f4;
+      line-height: 1.6;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
-    header {
-      background-color: #222;
-      padding: 20px;
-      text-align: center;
+    h1, h2 {
+      color: #00ffe1;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2em;
+    code {
+      background: #222;
+      padding: 0.2em 0.4em;
+      border-radius: 4px;
     }
-    section {
-      padding: 20px;
-    }
-    h2 {
-      color: #0ff;
+    .section {
+      margin-bottom: 2rem;
     }
     ul {
       list-style-type: square;
-      padding-left: 20px;
+      margin-left: 1.5rem;
     }
     footer {
-      background-color: #222;
-      text-align: center;
-      padding: 10px;
+      border-top: 1px solid #333;
+      margin-top: 2rem;
+      padding-top: 1rem;
       font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Tag + Trace Engine Core</h1>
-    <p>Simple, realistic, and modular game engine focused on tag-based data optimization and surface-aware AI.</p>
-  </header>
 
-  <section>
-    <h2>Key Engine Systems</h2>
+  <h1>Game Engine: Tag & Trace Core</h1>
+
+  <p>This custom game engine focuses on lightweight, deterministic rendering with intelligent systems for AI, lighting, and physics — all centered on a powerful <strong>tagging and tracing architecture</strong>.</p>
+
+  <div class="section">
+    <h2>Core Feature Set</h2>
     <ul>
-      <li><strong>Surface Tagging System</strong> – Embed metadata into textures and meshes for AI vision, physics logic, and light behavior.</li>
-      <li><strong>Trace-Based AI Perception</strong> – Bot logic uses raytraced data and surface tags for vision, sound detection, and navigation.</li>
-      <li><strong>Texture-Driven Lighting Control</strong> – Normalmaps, masks, and texture tags influence real-time lighting fidelity.</li>
-      <li><strong>LOD-Based Light Tagging</strong> – Real-time raytracing adjusts detail dynamically based on surface tags.</li>
-      <li><strong>Baked Lightmap Overrides</strong> – RT systems can selectively overwrite or blend with baked lighting based on tags.</li>
-      <li><strong>Prebaked Physics Zones</strong> – Stamp areas with physical properties before runtime to accelerate simulation.</li>
-      <li><strong>Tagged Sound Reverb Zones</strong> – Acoustic environments controlled through tagged geometry.</li>
+      <li><strong>Surface Tagging:</strong> Prebaked metadata tags per texture or mesh surface — controls AI vision, lighting detail, and physics interaction.</li>
+      <li><strong>Texture-Based Lighting LOD:</strong> Lightmaps augmented by tags to enable dynamic lighting precision at runtime.</li>
+      <li><strong>Trace-Triggered AI:</strong> Bot sight, hearing, and pathing react to tagged visibility zones and shadow layers.</li>
+      <li><strong>Deterministic Ray Sampling:</strong> AI line-of-sight and sound tracing calculated from fixed, replicable mesh tags.</li>
+      <li><strong>Stamped Physics Zones:</strong> Low-cost surface stamps embed physical material and friction data.</li>
+      <li><strong>Simple Reverb & Sound Tagging:</strong> Sound environments derived from material tags and occlusion layers.</li>
     </ul>
-  </section>
+  </div>
 
-  <section>
+  <div class="section">
     <h2>Design Philosophy</h2>
-    <p>This engine isn't about complexity — it's about purpose. Every texture, every surface, every effect: informed by tags. Built for realistic bots, efficient rendering, and total runtime clarity.</p>
-  </section>
+    <p>The engine prioritizes <strong>realism over complexity</strong>. All interactive behavior and lighting is driven by tagged data — no hidden magic, no unnecessary systems. This keeps things simple and transparent, while still delivering high-fidelity, trace-aware simulation.</p>
+  </div>
+
+  <div class="section">
+    <h2>Development Goals</h2>
+    <ul>
+      <li>Compete with projected next-gen standards (5-year forecast)</li>
+      <li>Benchmark all systems with bandwidth throughput in mind</li>
+      <li>Enable AI training through light-aware, tagged simulation</li>
+      <li>Prebake all possible texture metadata before final build</li>
+    </ul>
+  </div>
 
   <footer>
-    <p>&copy; 2025 Tag + Trace Engine | Built for developers who think ahead.</p>
+    Built by Teromen • GitHub Project Site<br/>
+    <code>#TagAndTrace</code> • <code>#RealWorldRendering</code>
   </footer>
+
 </body>
 </html>
