--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <code>#TagAndTrace</code> • <code>#RealWorldRendering</code>
   </footer>
 <form action="https://formspree.io/f/yourFormID" method="POST">
-  <label>Your Email:
-    <input type="email" name="email" required>
+  <label>Your Email:Dsstang36@gmail.com
+    <input type="Dsstang36@gmail.com" name="Dsstang36@gmail.com" required>
   </label>
   <label>Your Message:
     <textarea name="message" required></textarea>
