--- a/index.html
+++ b/index.html
@@ -1,104 +1,117 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Physics + Lighting Data Tagging System</title>
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background-color: #f4f4f4;
-      color: #222;
-      line-height: 1.6;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    code {
-      background-color: #eaeaea;
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
-      font-size: 90%;
-    }
-    blockquote {
-      border-left: 4px solid #ccc;
-      padding-left: 1em;
-      color: #555;
-      margin-left: 0;
-    }
-    ul {
-      padding-left: 1.2em;
-    }
-    footer {
-      margin-top: 4rem;
-      font-size: 0.9em;
-      color: #888;
-    }
-  </style>
-</head>
-<body>
+# 🧠 MegaData Engine
 
-  <h1>Stamped Data Tagging System for Physics and Lighting</h1>
-  <p><strong>By Teromen</strong></p>
+### A Unified Simulation Framework for AI, Quantum Emulation, and Forensic Analysis
 
-  <h2>Overview</h2>
-  <p>
-    I’m an amateur level designer fascinated by how engines handle large-scale environments, and I’ve been brainstorming a theoretical system that I’d love to get feedback on — especially from anyone with programming or engine experience.
-  </p>
+---
 
-  <h2>The Core Idea</h2>
-  <p>
-    Rather than relying on dense geometry or heavy shaders everywhere, what if an engine used <strong>stamped data</strong> — similar to <em>MegaTexture</em> decals — not just for visuals, but for <strong>physics</strong> and <strong>lighting</strong> information as well?
-  </p>
-  <p>
-    These stamps could include <code>16-bit normal maps</code> (or similar precision) that represent physical surface properties like:
-  </p>
-  <ul>
-    <li>Bump height</li>
-    <li>Surface friction</li>
-    <li>Impact reaction zones</li>
-  </ul>
+## 📘 Project Summary
 
-  <h2>Vector Path Tracing Concept</h2>
-  <p>
-    Alongside this, I’m imagining a <strong>vector path tracing system</strong> — not necessarily full real-time ray tracing — but something that leverages vector data to simulate:
-  </p>
-  <ul>
-    <li>Light bounce and diffusion</li>
-    <li>Material influence</li>
-    <li>Ambient energy transfer</li>
-  </ul>
-  <p>
-    It could be optimized for large, detailed environments without taxing the GPU like traditional RT.
-  </p>
+**MegaData** is a conceptual GPU-based simulation engine designed to unify environmental data into a single, layered texture grid. This grid enables AI agents to read physical, semantic, and emotional information from the environment, allowing for grounded, emergent behavior, quantum-like reasoning, and complete forensic replay of events.
 
-  <h2>Why This?</h2>
-  <p>
-    The goal is a <strong>lightweight system</strong> for delivering realistic lighting and material response, especially in open-world or dense indoor scenes. Instead of real-time geometry or lighting updates, the system would rely on:
-  </p>
-  <ul>
-    <li>Pre-tagged physical surface maps</li>
-    <li>Data stamps placed by designers or automated tooling</li>
-    <li>Efficient logic lookups for physics and lighting behavior</li>
-  </ul>
+Rather than treating AI, physics, and graphics as disconnected systems, MegaData proposes a unified approach where the **entire world becomes readable truth.**
 
-  <h2>Questions for the Community</h2>
-  <ul>
-    <li>Does anything like this already exist in engines or tools?</li>
-    <li>Could a simplified version be implemented using scripting?</li>
-    <li>Are “tagged” surface behaviors used anywhere else that I might not know about?</li>
-  </ul>
-  <p>
-    I’m tossing this out as a thought experiment and would love to hear what others think!
-  </p>
+---
 
-  <footer>
-    Thanks for reading,<br/>
-    — Teromen
-  </footer>
+## 🌐 Engine Architecture
 
-</body>
-</html>
+### 🧱 MegaData Grid
+- **Multi-layered texture atlas** rendered and sampled in world space
+- Each **texel** (texture pixel) contains:
+  - Physical: height, normal, friction, sound reflection, material type
+  - Environmental: temperature, pressure, illumination, magnetic force
+  - Semantic: legality, ownership, history, danger, importance
+  - Emotional: fear, safety, memory, curiosity, narrative weight
+  - Probabilistic states: e.g., 30% chance to be water, 70% ice
+
+### 🔄 Update Logic
+- Updated in real time using GPU compute shaders or RT cores
+- Changes triggered by:
+  - Agent actions
+  - Time-based events
+  - Environmental simulations (e.g., fire spreading, damage)
+
+---
+
+## 🧠 AI Perception Framework
+
+### AI Reads the World
+- AI agents use ray-based queries to sample texels
+- No hallucination — decisions are based on actual, authored data
+
+### Capabilities:
+- **Memory**: Surfaces retain historical tags; AI recalls past encounters
+- **Emotion**: AI behavior influenced by semantic/emotional tag layers
+- **Causal Logic**: Agents infer how actions impact the environment
+- **Vector Reasoning**: Projected “thought rays” visualize paths, attention, or emotional focus
+
+---
+
+## 🧪 Quantum Emulator Layer
+
+### Simulated Quantum Principles:
+- **Superposition**: Texels hold multiple possible states with weightings
+- **Entanglement**: Texels mirror or react to linked texels elsewhere
+- **Observer Effect**: AI collapses state via observation or interaction
+- **Procedural Quantum Logic**: Evolving relationships encoded via simulation logic
+
+### Use Cases:
+- Teaching quantum principles visually
+- Simulating multiverse logic or cognitive paradoxes
+- Generating AI behavior based on probability fields
+
+---
+
+## 🕵️ kNew Forensics System
+
+### Total Scene Replay & Event Analysis
+- Every texel change is logged with time, cause, and effect
+- A forensic viewer replays the world via:
+  - Heat maps
+  - Causal chains
+  - Emotional timeline overlays
+
+### Remote Analysis
+- Client devices (laptops, tablets) request vector traces
+- Sends preview rays to server to receive relevant texel projections
+- Enables low-bandwidth, high-accuracy forensic work
+
+---
+
+## 🎯 Use Cases
+
+- Emergent AI characters in open worlds
+- Emotionally reactive NPCs in narrative games
+- Educational simulations for physics & quantum behavior
+- Forensic crash investigation and disaster modeling
+- AI safety testing and cognitive reasoning research
+
+---
+
+## 🧩 Planned Features
+
+- [ ] Unity & Unreal Engine integration
+- [ ] Texture Tag Editor (GUI-based)
+- [ ] kNew Forensics Viewer Tool
+- [ ] MegaData Compression System
+- [ ] Quantum Sheet Debug UI
+- [ ] Emotion Projection Visualizer
+- [ ] Offline Forensics Playback Mode
+
+---
+
+## 🛠️ Project Status
+
+📍 Conceptual Design Complete  
+🔍 Validated by multiple advanced AI systems  
+🎯 Seeking collaborators, researchers, and prototype developers  
+
+---
+
+## 📫 Contact & Collaboration
+
+**Author:** [Your Name]  
+📧 Email: [your.Dsstang36@gmail.com]  
+🧵 Forum Thread: [link-to-discussion-thread]  
+📄 Design Doc: [link-to-detailed-PDF/Notion/GDoc]
+
+> “What if AI didn’t hallucinate the world… but read it like scripture carved into every surface?”
