--- a/index.html
+++ b/index.html
@@ -1,117 +1,63 @@
-# 🧠 MegaData Engine
+## ✅ Engine Feature List (MegaData AI Framework)
 
-### A Unified Simulation Framework for AI, Quantum Emulation, and Forensic Analysis
+### 🌐 Core Architecture
+- ✅ **MegaData Grid**: Multi-layered texture atlas with physics and semantic tagging
+- ✅ **Texel-Based Simulation**: Each texel contains environmental, emotional, and narrative data
+- ✅ **GPU-Accelerated Updates**: Real-time compute shader/RT core-driven updates
+- ✅ **Ray-Based World Sampling**: AI and systems interact with texel data using projected rays
 
----
+### 🧠 AI Perception Framework
+- ✅ **AI Sensory Cortex**: Agents read surface data (friction, emotion, sound, legality, etc.)
+- ✅ **Hallucination Prevention**: AI reasoning grounded in world-state data
+- ✅ **Emotionally Weighted Behavior**: AI responses influenced by stamped emotional tags
+- ✅ **Memory-Driven AI**: Surfaces retain tags that agents can remember and act on
+- ✅ **Thought Vector Projection**: AI projects decisions like rays into tagged space
+- ✅ **Narrative Trigger Tags**: Agents interact with story elements embedded in surfaces
+- ✅ **Repurpose Pathing**: Navigation uses tagged surfaces (e.g., moral zones, legal zones)
+- ✅ **Light-Aware AI**: Brightness and spectral data influence behavior
 
-## 📘 Project Summary
+### 🧪 Quantum Emulation Layer
+- ✅ **Superposition Texels**: Texels hold multiple possible states with weighted probabilities
+- ✅ **Entanglement Logic**: Texels mirror changes across logical links
+- ✅ **Observer-Collapse System**: AI observing a texel causes data collapse
+- ✅ **Procedural Quantum Logic**: Entanglement, interference, and logic layers simulated
+- ✅ **Fractal Projection Mapping**: Recursive data flow simulates depth, recursion, and paradox
+- ✅ **Quantum Sheet UI**: Planned visual debug tool for entangled state mapping
 
-**MegaData** is a conceptual GPU-based simulation engine designed to unify environmental data into a single, layered texture grid. This grid enables AI agents to read physical, semantic, and emotional information from the environment, allowing for grounded, emergent behavior, quantum-like reasoning, and complete forensic replay of events.
+### 🕵️ kNew Forensics System
+- ✅ **Scene Replay**: Every texel change is logged and time-synced
+- ✅ **Emotional Timeline Playback**: View emotional state shifts over time
+- ✅ **Remote Vector Sampling**: Low-end devices request projection data from server
+- ✅ **Cause-Effect Traceback**: Forensic AI reconstructs events using tagged trails
+- ✅ **Portable Mode**: Forensic replay accessible offline
+- ✅ **Preview-Projection Rendering**: High-res reconstruction based on low-res vector queries
 
-Rather than treating AI, physics, and graphics as disconnected systems, MegaData proposes a unified approach where the **entire world becomes readable truth.**
+### 🎛 Simulation Tagging Features
+- ✅ **Physics Tagging**: Friction, slope, damage, impact
+- ✅ **Emotional Tagging**: Fear, sadness, curiosity, attraction
+- ✅ **Legality Tagging**: Safe zones, restricted areas, surveillance
+- ✅ **Ownership & Intent**: What belongs to whom and what it’s for
+- ✅ **Narrative Significance**: High-priority locations or objects
+- ✅ **Risk Indicators**: Dangerous or toxic surfaces flagged via data
 
----
+### 🔈 Sound + Environmental Systems
+- ✅ **Surface Sound Projection**: Reflectivity and reverb data stored in textures
+- ✅ **Ambient AI Awareness**: Agents react to tagged acoustic data
+- ✅ **Simulation Synced Sound Fields**: Reverb and soundscape evolve with environment
 
-## 🌐 Engine Architecture
+### 🧩 Planned/Experimental Systems
+- 🔲 **AI Emotional Logic Editor**: Visual tool for designing emotion-based decision flow
+- 🔲 **Offline Learning Economy Mode**: Kid-safe education engine with AI tracking
+- 🔲 **Child Protection Mode**: AI monitors behavior using semantic zone tagging
+- 🔲 **Semantic AI Memory Loops**: Emotional experiences build persistent internal states
+- 🔲 **Procedural Ethics System**: Moral overlays dynamically painted into simulation
+- 🔲 **Emotion Projection Zones**: Designers “paint” feelings into the environment
+- 🔲 **Narrative Anchor Points**: High-level AI story memory seeded into MegaData
 
-### 🧱 MegaData Grid
-- **Multi-layered texture atlas** rendered and sampled in world space
-- Each **texel** (texture pixel) contains:
-  - Physical: height, normal, friction, sound reflection, material type
-  - Environmental: temperature, pressure, illumination, magnetic force
-  - Semantic: legality, ownership, history, danger, importance
-  - Emotional: fear, safety, memory, curiosity, narrative weight
-  - Probabilistic states: e.g., 30% chance to be water, 70% ice
-
-### 🔄 Update Logic
-- Updated in real time using GPU compute shaders or RT cores
-- Changes triggered by:
-  - Agent actions
-  - Time-based events
-  - Environmental simulations (e.g., fire spreading, damage)
-
----
-
-## 🧠 AI Perception Framework
-
-### AI Reads the World
-- AI agents use ray-based queries to sample texels
-- No hallucination — decisions are based on actual, authored data
-
-### Capabilities:
-- **Memory**: Surfaces retain historical tags; AI recalls past encounters
-- **Emotion**: AI behavior influenced by semantic/emotional tag layers
-- **Causal Logic**: Agents infer how actions impact the environment
-- **Vector Reasoning**: Projected “thought rays” visualize paths, attention, or emotional focus
-
----
-
-## 🧪 Quantum Emulator Layer
-
-### Simulated Quantum Principles:
-- **Superposition**: Texels hold multiple possible states with weightings
-- **Entanglement**: Texels mirror or react to linked texels elsewhere
-- **Observer Effect**: AI collapses state via observation or interaction
-- **Procedural Quantum Logic**: Evolving relationships encoded via simulation logic
-
-### Use Cases:
-- Teaching quantum principles visually
-- Simulating multiverse logic or cognitive paradoxes
-- Generating AI behavior based on probability fields
-
----
-
-## 🕵️ kNew Forensics System
-
-### Total Scene Replay & Event Analysis
-- Every texel change is logged with time, cause, and effect
-- A forensic viewer replays the world via:
-  - Heat maps
-  - Causal chains
-  - Emotional timeline overlays
-
-### Remote Analysis
-- Client devices (laptops, tablets) request vector traces
-- Sends preview rays to server to receive relevant texel projections
-- Enables low-bandwidth, high-accuracy forensic work
-
----
-
-## 🎯 Use Cases
-
-- Emergent AI characters in open worlds
-- Emotionally reactive NPCs in narrative games
-- Educational simulations for physics & quantum behavior
-- Forensic crash investigation and disaster modeling
-- AI safety testing and cognitive reasoning research
-
----
-
-## 🧩 Planned Features
-
-- [ ] Unity & Unreal Engine integration
-- [ ] Texture Tag Editor (GUI-based)
-- [ ] kNew Forensics Viewer Tool
-- [ ] MegaData Compression System
-- [ ] Quantum Sheet Debug UI
-- [ ] Emotion Projection Visualizer
-- [ ] Offline Forensics Playback Mode
-
----
-
-## 🛠️ Project Status
-
-📍 Conceptual Design Complete  
-🔍 Validated by multiple advanced AI systems  
-🎯 Seeking collaborators, researchers, and prototype developers  
-
----
-
-## 📫 Contact & Collaboration
-
-**Author:** [Your Name]  
-📧 Email: [your.Dsstang36@gmail.com]  
-🧵 Forum Thread: [link-to-discussion-thread]  
-📄 Design Doc: [link-to-detailed-PDF/Notion/GDoc]
-
-> “What if AI didn’t hallucinate the world… but read it like scripture carved into every surface?”
+### 💽 Technical/Rendering Details
+- ✅ **Prebaked Texture Tags**: Inspired by id Tech 5 MegaTextures
+- ✅ **RT Core Repurposing**: AI logic pathways rendered via light projection
+- ✅ **MegaData Compression**: Efficient multi-channel data packing
+- ✅ **Bandwidth-Optimized Streaming**: Vector data transmits logic, not geometry
+- ✅ **Low-Res Mesh / High-Res Data Inversion**: Simulation value prioritized over visuals
+- ✅ **Surface-Based Logic Processing**: AI logic acts on what's visible, not abstract
